; ModuleID = '/home/carl/AnghaBench/linux/drivers/base/power/extr_main.c_device_pm_add.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/base/power/extr_main.c_device_pm_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { %struct.TYPE_3__, %struct.device*, %struct.TYPE_4__* }
%struct.TYPE_3__ = type { i32, i32, i64 }
%struct.TYPE_4__ = type { i8* }

@.str = private unnamed_addr constant [23 x i8] c"Adding info for %s:%s\0A\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"No Bus\00", align 1
@dpm_list_mtx = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [34 x i8] c"parent %s should not be sleeping\0A\00", align 1
@dpm_list = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @device_pm_add(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %3 = load %struct.device*, %struct.device** %2, align 8
  %4 = call i64 @device_pm_not_required(%struct.device* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %55

7:                                                ; preds = %1
  %8 = load %struct.device*, %struct.device** %2, align 8
  %9 = getelementptr inbounds %struct.device, %struct.device* %8, i32 0, i32 2
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %11 = icmp ne %struct.TYPE_4__* %10, null
  br i1 %11, label %12, label %18

12:                                               ; preds = %7
  %13 = load %struct.device*, %struct.device** %2, align 8
  %14 = getelementptr inbounds %struct.device, %struct.device* %13, i32 0, i32 2
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  br label %19

18:                                               ; preds = %7
  br label %19

19:                                               ; preds = %18, %12
  %20 = phi i8* [ %17, %12 ], [ getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), %18 ]
  %21 = load %struct.device*, %struct.device** %2, align 8
  %22 = call i32 @dev_name(%struct.device* %21)
  %23 = call i32 @pr_debug(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %20, i32 %22)
  %24 = load %struct.device*, %struct.device** %2, align 8
  %25 = call i32 @device_pm_check_callbacks(%struct.device* %24)
  %26 = call i32 @mutex_lock(i32* @dpm_list_mtx)
  %27 = load %struct.device*, %struct.device** %2, align 8
  %28 = getelementptr inbounds %struct.device, %struct.device* %27, i32 0, i32 1
  %29 = load %struct.device*, %struct.device** %28, align 8
  %30 = icmp ne %struct.device* %29, null
  br i1 %30, label %31, label %46

31:                                               ; preds = %19
  %32 = load %struct.device*, %struct.device** %2, align 8
  %33 = getelementptr inbounds %struct.device, %struct.device* %32, i32 0, i32 1
  %34 = load %struct.device*, %struct.device** %33, align 8
  %35 = getelementptr inbounds %struct.device, %struct.device* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 2
  %37 = load i64, i64* %36, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %46

39:                                               ; preds = %31
  %40 = load %struct.device*, %struct.device** %2, align 8
  %41 = load %struct.device*, %struct.device** %2, align 8
  %42 = getelementptr inbounds %struct.device, %struct.device* %41, i32 0, i32 1
  %43 = load %struct.device*, %struct.device** %42, align 8
  %44 = call i32 @dev_name(%struct.device* %43)
  %45 = call i32 @dev_warn(%struct.device* %40, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0), i32 %44)
  br label %46

46:                                               ; preds = %39, %31, %19
  %47 = load %struct.device*, %struct.device** %2, align 8
  %48 = getelementptr inbounds %struct.device, %struct.device* %47, i32 0, i32 0
  %49 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %48, i32 0, i32 1
  %50 = call i32 @list_add_tail(i32* %49, i32* @dpm_list)
  %51 = load %struct.device*, %struct.device** %2, align 8
  %52 = getelementptr inbounds %struct.device, %struct.device* %51, i32 0, i32 0
  %53 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %52, i32 0, i32 0
  store i32 1, i32* %53, align 8
  %54 = call i32 @mutex_unlock(i32* @dpm_list_mtx)
  br label %55

55:                                               ; preds = %46, %6
  ret void
}

declare dso_local i64 @device_pm_not_required(%struct.device*) #1

declare dso_local i32 @pr_debug(i8*, i8*, i32) #1

declare dso_local i32 @dev_name(%struct.device*) #1

declare dso_local i32 @device_pm_check_callbacks(%struct.device*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @dev_warn(%struct.device*, i8*, i32) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
